2010-11-13  Bruno Haible  <bruno@clisp.org>

	Improve documentation.
	* doc/unistr.texi (Elementary string checks): Add an index entry.
	(Elementary string functions on NUL terminated strings): Enhance doc
	about uN_prev.
	Reported by Ben Pfaff <blp@cs.stanford.edu>.

2010-10-04  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* lib/Makefile.am (libunistring_la_LDFLAGS): Remove 'no-undefined' and
	dependencies.

2010-09-26  Bruno Haible  <bruno@clisp.org>

	Fix exported symbol list in VPATH builds after 2010-05-16 change.
	* lib/Makefile.am (libunistring.sym): Find header files in the right
	directory.

2010-09-23  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* lib/Makefile.am (MOSTLYCLEANDIRS): New variable.

2010-09-23  Bruno Haible  <bruno@clisp.org>

	* m4/libtool.m4: Update from libtool-2.4, with modifications.
	2009-04-23  Bruno Haible  <bruno@clisp.org>
		Fix recognition of "nm" command.
		* m4/libtool.m4 (LT_PATH_NM): Try "nm" program also when
		compiling for mingw in a cygwin environment.
	2008-04-06  Bruno Haible  <bruno@clisp.org>
		* m4/libtool.m4 (LT_INIT): When setting LIBTOOL, use
		CONFIG_SHELL; don't assume that the Makefile.in will set SHELL
		to ${CONFIG_SHELL}.
	* m4/ltversion.m4: Update from libtool-2.4.
	* build-aux/ltmain.sh: Likewise.

2010-09-14  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* autogen.sh: Update creation of lib/unistr.in.h.

2010-09-04  Bruno Haible  <bruno@clisp.org>

	Simplify use of gnulib-tool now that gnulib-tool --import works better.
	* autogen.sh: Don't remove gnulib-cache.m4 before running gnulib-tool.

2010-06-04  Bruno Haible  <bruno@clisp.org>

	* m4/libtool.m4: Update from libtool-2.2.8, with modifications.
	2009-04-23  Bruno Haible  <bruno@clisp.org>
		Fix recognition of "nm" command.
		* m4/libtool.m4 (LT_PATH_NM): Try "nm" program also when
		compiling for mingw in a cygwin environment.
	2008-04-06  Bruno Haible  <bruno@clisp.org>